tests/NormalTests/paczka1/small_fuzzy/55230840.err
Error in line 1: v5Pb S821 49,6
Error in line 3: S364 S821 25,7
